# NINJA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  Pipfile  README.md  compile_commands.json  gmon.out  ninja  ninja_debug  testing.cpp  tree.newick
NINJA/: .gitignore  ArgumentHandler.cpp  ArgumentHandler.hpp  ArrayHeapExtMem.cpp  ArrayHeapExtMem.cpp~  ArrayHeapExtMem.hpp  BinaryHeap.cpp  BinaryHeap.hpp  BinaryHeap_FourInts.cpp  BinaryHeap_FourInts.hpp  BinaryHeap_IntKey_TwoInts.cpp  BinaryHeap_IntKey_TwoInts.hpp  BinaryHeap_TwoInts.cpp  BinaryHeap_TwoInts.hpp  CandidateHeap.cpp  CandidateHeap.hpp  ClusterManager.cpp  DistanceCalculator.cpp  DistanceCalculator.hpp  DistanceCalculatorAVX.cpp  DistanceCalculatorAVX.hpp  DistanceCalculatorBase.hpp  DistanceReader.cpp  DistanceReader.hpp  DistanceReaderExtMem.cpp  DistanceReaderExtMem.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  Makefile  Makefile~  Ninja  Ninja.cpp  README  SequenceFileReader.cpp  SequenceFileReader.hpp  Stack.cpp  Stack.hpp  TreeBuilder.cpp  TreeBuilder.hpp  TreeBuilderBinHeap.cpp  (+10 more)
docs/: _argument_handler_8cpp.html  _argument_handler_8hpp.html  _argument_handler_8hpp_source.html  _array_heap_ext_mem_8cpp.html  _array_heap_ext_mem_8cpp.js  _array_heap_ext_mem_8hpp.html  _array_heap_ext_mem_8hpp.js  _array_heap_ext_mem_8hpp_source.html  _binary_heap_8cpp.html  _binary_heap_8cpp.js  _binary_heap_8hpp.html  _binary_heap_8hpp_source.html  _binary_heap___four_ints_8cpp.html  _binary_heap___four_ints_8cpp.js  _binary_heap___four_ints_8hpp.html  (+201 more)
(+529 files in other folders)
